# wordpress-rs

./: Cargo.toml  justfile  rustfmt.toml
docker/: docker-compose.yml
src/: client.rs  document.rs  endpoint.rs  error.rs  lib.rs  query.rs  request.rs  root.rs  test.rs  wordpress.rs
src/endpoints/: mod.rs  posts.rs
src/endpoints/posts/: retrieve.rs
