[package]
name = "wordprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bytes = "1.1.0"
http = "0.2.6"
thiserror = "1.0.30"
url = "2.2.2"

[dev-dependencies]
pretty_assertions = "1.2.0"
test-case = "2.0.1"
