[package]
name = "wordprs"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = ["futures-util", "reqwest", "tokio"]

[dependencies]
async-trait = "0.1.52"
bytes = "1.1.0"
http = "0.2.6"
once_cell = "1.10.0"
regex = "1.5.5"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"

reqwest = { version = "0.11.10", optional = true }
tokio = { version = "1.17.0", optional = true, features = ["sync"] }
futures-util = { version = "0.3.21", optional = true }

[dev-dependencies]
derive_builder = "0.11.1"
pretty_assertions = "1.2.0"
test-case = "2.0.1"
tokio = { version = "1.17.0", features = ["macros"] }
wiremock = "0.5.11"
